# nutrition_lite

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  cookies.txt  debug-cookies.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 04a7e0377c9b_create_remaining_tables.py  63a953d39166_create_users_and_profiles_tables.py  6c70d87cac2b_add_tutorial_completions_table_v2.py  736c5c90d610_add_created_at_and_updated_at_to_.py  a62e2bce09fb_add_recommended_meals_column_to_meal_.py  ecdd67ebcfe9_remove_meal_recommendation_unique_.py  f9c3fd58b44a_add_tutorial_completions_table.py
backend/app/: main.py  settings.py
backend/app/api/http/: cookies.py  errors.py
backend/app/application/nutrition/: errors.py
backend/app/application/profile/: __init__.py
backend/app/application/tutorial/: __init__.py
backend/app/di/: container.py
backend/app/domain/auth/: entities.py  errors.py  value_objects.py
backend/app/domain/billing/: entities.py  errors.py
backend/app/domain/calendar/: entities.py  errors.py
backend/app/domain/meal/: entities.py  errors.py  value_objects.py
backend/app/domain/nutrition/: daily_nutrition.py  daily_report.py  errors.py  meal_nutrition.py  meal_recommendation.py  recommendation.py
backend/app/domain/profile/: __init__.py  entities.py  errors.py  value_objects.py
backend/app/domain/tutorial/: __init__.py  (+3 more)
backend/app/jobs/: generate_meal_recommendations.py
backend/docs/: backend_structure.md
backend/docs/openapi/: auth.yaml  openapi copy.yaml  openapi.yaml
backend/docs/plan/: 機能拡張案.md
backend/docs/refactor/: rf_plan.md
backend/docs/要件&仕様/: 要件整理.md
backend/scripts/: create_test_subscription.py  smoke_daily_report_generator.py  smoke_generate_meal_recommendation.py  smoke_nutrition_estimator.py  smoke_target_generator.py
backend/tests/: conftest.py
backend/tests/fakes/: auth_repositories.py  auth_services.py  auth_uow.py  calendar_repositories.py  calendar_uow.py  meal_uow.py  profile_repositories.py  profile_uow.py
backend/tests/integration/: test_auth_endpoints.py
backend/tests/unit/: conftest.py
(+675 files in other folders)
