[project]
name = "nutrition-backend"
version = "0.1.0"
description = "Nutrition app backend (auth-first)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
  "pydantic[email]>=2.6.0,<3.0.0",
  "SQLAlchemy>=2.0.0,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0"   # 将来の画像アップロード用
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
  "mypy",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
