[project]
name = "nutrition-backend"
version = "0.1.0"
description = "Nutrition app backend (auth-first)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
  "pydantic[email]>=2.6.0,<3.0.0",
  "SQLAlchemy>=2.0.0,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "minio>=7.2.18",
  "bcrypt==4.3.0",
  "openai>=2.8.1",
  "stripe>=14.0.1",
  "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
  "mypy",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# ã“ã“ã‹ã‚‰ä¸‹ã‚’è¿½åŠ  ðŸ‘‡

[tool.setuptools]
# ã€Œã‚«ãƒ¬ãƒ³ãƒˆãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒª (backend) ç›´ä¸‹ã‚’ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸æŽ¢ç´¢ã®èµ·ç‚¹ã«ã™ã‚‹ã€
package-dir = {"" = "."}

[tool.setuptools.packages.find]
# ã©ã“ã‚’æŽ¢ã™ã‹
where = ["."]
# è¦‹ã¤ã‘ãŸã„ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ï¼ˆapp é…ä¸‹ã ã‘ã‚’å¯¾è±¡ï¼‰
include = ["app*"]
# é…å¸ƒã‹ã‚‰é™¤å¤–ã—ãŸã„ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ / ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒª
exclude = [
  "alembic*",
  "tests*",
]

[tool.pytest.ini_options]
markers = [
  "real_integration: tests that hit real infra (real DB, MinIO, etc.)",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
